# unix-tools

./: .gitignore  .gitmodules  LICENSE  README.md
config/: .Xresources  .bashrc  .gtkrc-2.0  .vimrc  .xbindkeysrc  .xprofile  bashrc  gitconfig  kitty.conf  nvimrc.vim  shellisms.sh  tmux.conf  vimrc.vim  zshrc
config/.vim/colors/: molokai.vim
config/dunst/: dunstrc
config/gtk-3.0/: settings.ini
config/i3/: config
config/irssi/: config
config/polybar/: config  launch.sh  variables.sh
config/sxhkd/: sxhkdrc
config/systemd/user/: spotifyd.service
cppprompt/: CMakeLists.txt  abbreviate_full_path.cpp  cppprompt.cpp
envs/python-tools/: pyproject.toml  requirements.txt
envs/python-tools/python_tools/: ansibleinventory2sshconfig.py  boost2camel.py  camel2boost.py  clean_ssh_known_hosts.py  cloud_tagged_inventory.py  git_tidy.py  jmespath.py  json2ini.py  json2yaml.py  jsornate.py  offset2rowcol.py  pydict2json.py  yaml2json.py  yaml2yaml.py
lib/python2/: process.py
lib/python2/test/: input_test.sh  test.py
resources/: arch_install.md  ascii.txt  desktop.md  gcp-snippets.txt  links.md  pythonlib.py  ricing.md  snippets.txt
resources/ansible/roles/restic/defaults/: main.yml
resources/ansible/roles/restic/tasks/: main.yml
resources/ansible/roles/restic/templates/: backup-cron.sh.j2  backup.sh.j2
resources/iTerm2/: com.googlecode.iterm2.plist
resources/installers/: osx
resources/vim/.vim/: scripts.vim
resources/xsl/: identity.xsl
vagrantfiles/archlinux-dev/: Vagrantfile  bootstrap.sh
