[project]
name = "python_tools"
version = "0.0.1"
dynamic = ["dependencies"]
description = "Personal set of tools written in python" 
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.9",
]
authors = [
  {name = "Jean-Bernard Jansen", email = "jeanbernard@jjansen.fr"}
]
maintainers = [
  {name = "Jean-Bernard Jansen", email = "jeanbernard@jjansen.fr"}
]

[project.urls]
Homepage = "https://github.com/duckie/unix-tools"
Documentation = "https://github.com/duckie/unix-tools"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
ansibleinventory2sshconfig = "python_tools.ansibleinventory2sshconfig:main"
boost2camel = "python_tools.boost2camel:main"
camel2boost = "python_tools.camel2boost:main"
clean_ssh_known_hosts = "python_tools.clean_ssh_known_hosts:main"
cloud_tagged_inventory = "python_tools.cloud_tagged_inventory:main"
git_tidy = "python_tools.git_tidy:main"
jmespath = "python_tools.jmespath:main"
json2ini = "python_tools.json2ini:main"
json2yaml = "python_tools.json2yaml:main"
jsornate = "python_tools.jsornate:main"
mail2login = "python_tools.mail2login:main"
offset2rowcol = "python_tools.offset2rowcol:main"
pydict2json = "python_tools.pydict2json:main"
yaml2json = "python_tools.yaml2json:main"
yaml2yaml = "python_tools.yaml2yaml:main"

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.black]
line-length = 120

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
